k8s/1-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: wisecow
  labels:
    name: wisecow
