k8s/4-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  namespace: wisecow
  labels:
    app: wisecow
spec:
  selector:
    app: wisecow
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4499
  type: LoadBalancer
