k8s/5-ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  namespace: wisecow
  annotations:
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ae4aa98a1eebc498fb958970541a79cc-563623370.us-east-1.elb.amazonaws.com
    secretName: wisecow-tls
  rules:
  - host: ae4aa98a1eebc498fb958970541a79cc-563623370.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wisecow-service
            port:
              number: 80
